--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -15,6 +15,11 @@
     <%= form.label :content %>
     <%= form.text_field :content, id: :tweet_content %>
   </div>
+
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image, id: :tweet_image %>
+  </div>
 <!--
   <div class="field">
     <%= form.label :user_id %>
