--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,6 +5,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th>Image</th>
       <th>Content</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @tweets.each do |tweet| %>
       <tr>
+        <td><%= image_tag tweet.image_url(:thumb) %></td>
         <td><%= tweet.content %></td>
         <td><%= tweet.user.email %></td>
         <td><%= link_to 'Show', tweet %></td>
